--- a/DataDictionary.ipynb
+++ b/DataDictionary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPoJuyQXa/JPzAT0lQGTiQU",
+      "authorship_tag": "ABX9TyNLxciLtuXkjcaLkGXo/Jga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,35 +143,51 @@
         "  keyList = []\n",
         "  definitionList = []\n",
         "  keyFound = False\n",
+        "  isComment = False\n",
         "                                                #Filter out non-strings\n",
         "  if type(desc) == str:\n",
+        "    \n",
         "    for char in desc:\n",
-        "      \n",
-        "      if char.isnumeric() == True:              #Build the Keys\n",
-        "        if keyFound == True:\n",
-        "          definition = definition.strip(\"\\n\")\n",
-        "          definition = definition.strip()\n",
-        "          definitionList.append(definition)\n",
-        "          definition = \"\"\n",
-        "          keyFound = False\n",
-        "          number += char\n",
+        "     \n",
+        "      if char == \")\":                           #Drops comments like \"(Since 2010)\"\n",
+        "        isComment = False\n",
+        "        continue\n",
+        "      elif char == \"(\":\n",
+        "        isComment = True\n",
+        "        continue\n",
         "\n",
-        "        else:                                   #Build the Values\n",
-        "          number += char\n",
+        "      if isComment == True:\n",
+        "        continue \n",
+        "      else:\n",
+        "        if char.isnumeric() == True:              #Build the Keys\n",
+        "          if keyFound == True:\n",
+        "            definition = definition.strip(\"\\n\")\n",
+        "            definition = definition.strip()\n",
+        "            definitionList.append(definition)\n",
+        "            definition = \"\"\n",
+        "            keyFound = False\n",
+        "            number += char\n",
         "\n",
-        "      elif char == (\"=\"):                       #Commit the Key\n",
-        "        keyList.append(number)\n",
-        "        number = \"\"\n",
-        "        keyFound = True\n",
+        "          else:                                   #Build the Values\n",
+        "            number += char\n",
         "\n",
-        "      else:                                     #Build the value\n",
-        "        definition += char \n",
+        "        elif char == (\"=\"):                       #Commit the Key\n",
+        "          keyList.append(number)\n",
+        "          number = \"\"\n",
+        "          keyFound = True\n",
+        "\n",
+        "        else:                                     #Build the value\n",
+        "          definition += char \n",
+        "\n",
+        "        priorChar = char\n",
+        "\n",
         "    else:\n",
         "      pass\n",
-        "                                                #Add the last Definition\n",
-        "    definition = definition.strip(\"\\n\")\n",
-        "    definition = definition.strip()\n",
-        "    definitionList.append(definition)\n",
+        "      \n",
+        "                                                  #Add the last Definition\n",
+        "      definition = definition.strip(\"\\n\")\n",
+        "      definition = definition.strip()\n",
+        "      definitionList.append(definition)\n",
         "\n",
         "  toReturn = list(zip(keyList,definitionList))  #Create a list of (K,V) Tuples\n",
         "\n",
@@ -180,7 +196,7 @@
       "metadata": {
         "id": "S3GvxIrQ4eZa"
       },
-      "execution_count": 5,
+      "execution_count": 260,
       "outputs": []
     },
     {
@@ -1527,12 +1543,12 @@
         "Tables6"
       ],
       "metadata": {
-        "id": "O1AJcIwO6_gp",
-        "outputId": "98f151c6-a0ad-46c8-c1cb-7abcf14d6ad2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 222
-        }
+        },
+        "id": "O1AJcIwO6_gp",
+        "outputId": "98f151c6-a0ad-46c8-c1cb-7abcf14d6ad2"
       },
       "execution_count": 234,
       "outputs": [
@@ -1690,7 +1706,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Parse out the Crash Type Numbering System from Tables5\n",
+        "#Parse out the Crash Type Numbering System from Tables6\n",
         "dataDict_Table6 = defaultdict(dict)                  #Build the Data Dictionary\n",
         "                                                      #For all Table 3\n",
         "\n",
@@ -1717,11 +1733,11 @@
         "  dataDict_Table6[\"Crash_Type\"][\"DATA\"][tup[0]] = tup[1]"
       ],
       "metadata": {
-        "id": "9I8g7Pua7N-v",
-        "outputId": "0187392a-38f7-4652-a80b-2e0c8a488d7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9I8g7Pua7N-v",
+        "outputId": "0187392a-38f7-4652-a80b-2e0c8a488d7d"
       },
       "execution_count": 236,
       "outputs": [
@@ -1747,11 +1763,257 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Extract the messy table data from the TABLES7 Sheet \n",
+        "  #(Manual inspection used to determine the cut points for the DFs)\n",
+        "Tables7_driverRelatedFactors = pd.read_excel(DD, 'Tables7', skiprows = 0, nrows=6,\n",
+        "                               header = 0, usecols= 'A:C')\n",
+        "\n",
+        "Tables7_nonMotoristLocation = pd.read_excel(DD, 'Tables7', skiprows = 0, nrows=3,\n",
+        "                               header = 0, usecols= 'D')\n",
+        "\n",
+        "Tables7_nonMotoristLocation\n"
+      ],
       "metadata": {
-        "id": "b98FGMKU8vYB"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        },
+        "id": "b98FGMKU8vYB",
+        "outputId": "cfce3f64-d6fe-4aea-aaf0-32dccc5735cb"
       },
-      "execution_count": null,
+      "execution_count": 263,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                               NON-MOTORIST LOCATION\n",
+              "0  0=NOT a Non-Motorist (e.g., an MV occupant)\\n1...\n",
+              "1  20=(since 2010) Shoulder/Roadside\\n21=(since 2...\n",
+              "2                                                NaN"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-9ac8f33c-cb25-4f8e-ae7f-59e243f6e8e9\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>NON-MOTORIST LOCATION</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0=NOT a Non-Motorist (e.g., an MV occupant)\\n1...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>20=(since 2010) Shoulder/Roadside\\n21=(since 2...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9ac8f33c-cb25-4f8e-ae7f-59e243f6e8e9')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-9ac8f33c-cb25-4f8e-ae7f-59e243f6e8e9 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-9ac8f33c-cb25-4f8e-ae7f-59e243f6e8e9');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 263
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Parse out the Driver Related Factors Numbering System from Tables7\n",
+        "dataDict_Table7 = defaultdict(dict)                  #Build the Data Dictionary\n",
+        "                                                      #For all Table 7\n",
+        "\n",
+        "print(Tables7_driverRelatedFactors.columns)                                                      \n",
+        "\n",
+        "dataDict_Table7[\"Driver_Related_Factors\"][\"DATA\"] = {}  #Create Keys for VM\n",
+        "drf_flattenedList = []\n",
+        "\n",
+        "for idx, series in Tables7_driverRelatedFactors.iterrows(): \n",
+        "\n",
+        "  drf_desc1 = series['DRIVER-RELATED FACTORS']\n",
+        "  drf_desc2 = series['Unnamed: 1']\n",
+        "  drf_desc3 = series['Unnamed: 2']\n",
+        "\n",
+        "  kvPairList1 = getKVPairs(drf_desc1)                 #Get list (K,V) tuples for DATA\n",
+        "  kvPairList2 = getKVPairs(drf_desc2)\n",
+        "  kvPairList2 = getKVPairs(drf_desc3)\n",
+        "\n",
+        "  drf_flattenedList += flattenLists(kvPairList1)     #Flatten into a list of tuples\n",
+        "  drf_flattenedList += flattenLists(kvPairList2)\n",
+        "  drf_flattenedList += flattenLists(kvPairList3)\n",
+        "\n",
+        "for tup in drf_flattenedList:                       #Build the dictionary from tuples\n",
+        "  dataDict_Table7[\"Driver_Related_Factors\"][\"DATA\"][tup[0]] = tup[1]"
+      ],
+      "metadata": {
+        "id": "bNQaXNhC90sz",
+        "outputId": "9263c1c4-0bbf-4100-ba5e-c9297dc49a3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 261,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['DRIVER-RELATED FACTORS', 'Unnamed: 1', 'Unnamed: 2'], dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Parse out the Driver Related Factors Numbering System from Tables7\n",
+        "\n",
+        "print(Tables7_nonMotoristLocation.columns)                                                      \n",
+        "\n",
+        "dataDict_Table7[\"Non_Motorist_Location\"][\"DATA\"] = {}  #Create Keys for VM\n",
+        "nml_flattenedList = []\n",
+        "\n",
+        "for idx, series in Tables7_nonMotoristLocation.iterrows(): \n",
+        "\n",
+        "  nml_desc1 = series['NON-MOTORIST LOCATION']\n",
+        "\n",
+        "\n",
+        "  kvPairList1 = getKVPairs(nml_desc1)                 #Get list (K,V) tuples for DATA\n",
+        "\n",
+        "  nml_flattenedList += flattenLists(kvPairList1)     #Flatten into a list of tuples\n",
+        "\n",
+        "\n",
+        "for tup in nml_flattenedList:                       #Build the dictionary from tuples\n",
+        "  dataDict_Table7[\"Non_Motorist_Location\"][\"DATA\"][tup[0]] = tup[1]"
+      ],
+      "metadata": {
+        "id": "18AYxxoqCsqF",
+        "outputId": "2e044afa-3e00-434c-d33e-ef1c3365d273",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 264,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['NON-MOTORIST LOCATION'], dtype='object')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "json_Table7 = json.dumps(dataDict_Table7, indent = 4) \n"
+      ],
+      "metadata": {
+        "id": "s0tgIxOJ-a3n"
+      },
+      "execution_count": 266,
       "outputs": []
     }
   ]
