sketched out first half of analysis

--- a/IC23_analysis.ipynb
+++ b/IC23_analysis.ipynb
@@ -1726,6 +1726,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# TODO visualize this"
+      ],
+      "metadata": {
+        "id": "N8Q_cAv_smNr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "ANALYSIS Q1A - Zipcodes producing drivers most likely to be involved in a crash"
@@ -1740,12 +1751,12 @@
         "orig_data_with_zip"
       ],
       "metadata": {
-        "id": "FGAxuAvWgKS2",
-        "outputId": "6661aaf3-272f-4a9a-bb80-44e4db2f87f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 505
-        }
+        },
+        "id": "FGAxuAvWgKS2",
+        "outputId": "6661aaf3-272f-4a9a-bb80-44e4db2f87f1"
       },
       "execution_count": 310,
       "outputs": [
@@ -2440,12 +2451,12 @@
         "q1a_summary"
       ],
       "metadata": {
-        "id": "jtuxeQfvi-J5",
-        "outputId": "1c596011-12b4-4de7-9cf4-b105a6d2b850",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
-        }
+        },
+        "id": "jtuxeQfvi-J5",
+        "outputId": "1c596011-12b4-4de7-9cf4-b105a6d2b850"
       },
       "execution_count": 352,
       "outputs": [
@@ -2655,6 +2666,47 @@
           "execution_count": 352
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO make a bar plot"
+      ],
+      "metadata": {
+        "id": "mb_ovnfgshU7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO heatmap of zipcodes producing bad drivers and another heatmat of zipcodes where crashes occur?\n",
+        "# some kind of diff of these to show where to put street signs versus where to target residents?"
+      ],
+      "metadata": {
+        "id": "2KqU2CUOstnG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ANALYSIS Q2 - "
+      ],
+      "metadata": {
+        "id": "SqNRyIE0tAq2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ANALYSIS Q2A - "
+      ],
+      "metadata": {
+        "id": "MjiRDisGtCfR"
+      }
     }
   ]
 }
