minor changes to filename input

--- a/getZipCodes/addZipCodesToFile.ipynb
+++ b/getZipCodes/addZipCodesToFile.ipynb
@@ -100,10 +100,11 @@
     {
       "cell_type": "code",
       "source": [
-        "## 2nd way \n",
+        "### 2nd way \n",
+        "## uncomment the following if you want to use files from your google drive\n",
         "\n",
         "# drive.mount('/content/gdrive')\n",
-        "# df = pd.read_csv(\"/content/gdrive/MyDrive/Figure1_csvFile.csv\")  # change this to where your csv are in drive"
+        "# filename = '/content/gdrive/MyDrive/Figure1_csvFile.csv' # change this to where your csv are in drive"
       ],
       "metadata": {
         "id": "d4NTWEaSdiVW"
@@ -117,13 +118,23 @@
         "## 3rd way \n",
         "# giving an address of a file that is available online\n",
         "\n",
-        "filename = \"https://raw.githubusercontent.com/osullik/ic23050/main/L4%20Washington%20Fatal%20Crash%20Files%20-%20Washington%20Traffic%20Safety%20Commission/Data_Washington%20Fatal%20Crash%20Survey.csv\"\n",
-        "df = pd.read_csv(filename, low_memory=False)\n"
+        "filename = \"https://raw.githubusercontent.com/osullik/ic23050/main/L4%20Washington%20Fatal%20Crash%20Files%20-%20Washington%20Traffic%20Safety%20Commission/Data_Washington%20Fatal%20Crash%20Survey.csv\"\n"
       ],
       "metadata": {
         "id": "wAXwr2zTc7sf"
       },
       "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv(filename, low_memory=False)"
+      ],
+      "metadata": {
+        "id": "EswxlE46gYuC"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
